# optimizing-machine-learning

./: .bazelrc  .gitignore  BUILD.bazel  DEVELOPMENT.md  MODULE.bazel  README.md  book.toml
.github/workflows/: deploy.yml
examples/: BUILD.bazel
examples/simple_gemm/: BUILD.bazel  EXPERIMENT_LOG.md  gemm.cc  gemm.cu  gemm.h  gemm_test.cc
src/: 0-introduction.md  01-introduction.md  03-hardware.md  05-optimizing-training.md  1-hardware.md  1-mental-model.md  2-code_examples.md  SUMMARY.md  glossary.md  quantization.md
tools/: BUILD.bazel  build.sh  mdbook_extension.bzl  mdbook_repo.bzl  mdbook_wrapper.sh  serve.sh
