module(
    name = "optimizing_machine_learning",
    version = "0.1.0",
)

# Core rules
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# CUDA support
bazel_dep(name = "rules_cuda", version = "0.3.0")
bazel_dep(name = "cutlass", version = "3.5.1")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.toolkit(
    name = "cuda",
    toolkit_path = "/usr/local/cuda",
)
use_repo(cuda, "cuda")

# Load the platform-aware mdbook repository extension
mdbook_ext = use_extension("//tools:mdbook_extension.bzl", "mdbook_ext")
use_repo(mdbook_ext, "mdbook_bin")
