load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cuda_library(
    name = "gemm",
    srcs = ["gemm.cu"],
    hdrs = ["gemm.h"],
    deps = [
        "@cutlass",
    ],
)

cc_test(
    name = "gemm_test",
    srcs = ["gemm_test.cc"],
    deps = [
        ":gemm",
    ],
)
